# tree-sitter-ngspice

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-ngspice.h  tree-sitter-ngspice.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_ngspice/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterNgspiceTests/: TreeSitterNgspiceTests.swift
src/: grammar.json  node-types.json  parser.c
test/circuit/: bipolar_amplifier.cir
test/corpus/: basics.txt  bipolar_amplifier.cir  bipolar_amplifier.txt  ring_oscillator.txt
