[package]
name = "tree-sitter-ngspice"
description = "tree-sitter grammar for ngspice, a circuit simulation language for defining electronic components and simulation commands."
version = "0.1.0"
authors = ["xloc <xloc.cc@outlook.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "ngspice"]
categories = ["parsing", "text-editors"]
repository = "https://www.github.com/xloc/tree-sitter-ngspice"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
