[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-ngspice"
description = "tree-sitter grammar for ngspice, a circuit simulation language for defining electronic components and simulation commands."
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "ngspice"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "xloc", email = "xloc.cc@outlook.com" }]
requires-python = ">=3.9"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://www.github.com/xloc/tree-sitter-ngspice"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
